<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/mainText1"
        android:layout_width="352dp"
        android:layout_height="92dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="115dp"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:backgroundTintMode="screen"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_weight="0.25"
        app:rowCount="4">

        <Button
            android:id="@+id/number7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:text="@string/_7"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/number8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:text="@string/_8"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/number9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:text="@string/_9"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/iconPlus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Plus"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/number4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:text="@string/_4"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/number5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:text="@string/_5"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/number6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:text="@string/_6"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/iconMinus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Minus"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/number1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:text="@string/_1"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/number2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:text="@string/_2"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/number3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:text="@string/_3"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/iconMultiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Multiple"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/number0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:text="@string/_0"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnSpan="2"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/iconClean"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:text="@string/Clean"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />

        <Button
            android:id="@+id/iconEqual"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/Result"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            app:layout_columnWeight="0.25"
            app:layout_rowWeight="0.25"
            tools:layout_editor_absoluteX="151dp"
            tools:layout_editor_absoluteY="-35dp" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>